--- a/style.css
+++ b/style.css
@@ -2,28 +2,41 @@
   height: 600px;
   width: 800px;
   font-size: 3em;
+  display: grid;
+  grid-template-columns: repeat(4, 80px);
+  grid-template-rows: repeat(3,100px);
+  text-align: center;
 }
 
 #header {
   background-color: red;
+  grid-column: 1 / 9;
 }
 
 #footer {
   background-color: indigo;
+  grid-column: 1 / 9;
+  grid-row: 7 / 7;
 }
 
 #article-1 {
   background-color: yellow;
+  grid-column: 3 / 8;
+  grid-row: 2 / 4;
 }
 
 #article-2 {
-  background-color: green;
-}
+    background-color: green;
+    grid-column: 3 / 8;
+    grid-row: 4 / 7;}
 
 #nav {
   background-color: orange;
+  grid-column: 1 / 3;
+  grid-row: 2 / 7;
 }
-
 #ad-area {
   background-color: blue;
+  grid-column: 8;
+  grid-row: 2 / 7;
 }
